--- a/Index.html
+++ b/Index.html
@@ -16,12 +16,12 @@
         </header>
         
         <main>
-            <nav>
-                <a href="Index.html"> HOME &nbsp;</a>
-                <a href="blogs.html"> Blogs &nbsp;</a>
-                <a href="top-charts.html"> Top Charts &nbsp;</a>
-                <a href="aboutus.html"> About Us &nbsp;</a>
-            </nav>
+            <ul>
+                <li><a class = "active" href="index.html">Home</a></li>
+                <li><a href = "blog.html">Blogs</a></li>
+                <li><a href = "top-charts.html.html">Top Charts</a></li>
+                <li><a href = "aboutus.html">About Us</a></li>
+            </ul>
             
             <article>
             <p>The purpose of Treble is to allow users to rate and discover music from around the world and learn information about specific songs and artists. Users on Treble can navigate through different artists and genres to find and rate all kinds of music. Each song on the website will have links to listen on streaming platforms like YouTube, Spotify, and Soundcloud. <br><br>
