--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
         <main>
             <ul>
                 <li><a class = "active" href="index.html">Home</a></li>
-                <li><a href = "blog.html">Blogs</a></li>
+                <li><a href = "blogs.html">Blogs</a></li>
                 <li><a href = "top-charts.html.html">Top Charts</a></li>
                 <li><a href = "aboutus.html">About Us</a></li>
             </ul>
